example/secondfile/objects/DHStatus_V6_WAN_IP_Address_Data__c.object
<CustomObject>
    <fields>
        <fullName>Cer_IP_Address__c</fullName>
        <label>Cer IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Connection_Level_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus-Connection Level Data</label>
        <referenceTo>DHStatus_Connection_Level_Data__c</referenceTo>
        <relationshipLabel>DHStatus-V6 WAN IP Address Datas</relationshipLabel>
        <relationshipName>DHStatus_V6_WAN_IP_Address_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_PL_Group_Port_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus-PL Group Port Data</label>
        <referenceTo>DHStatus_PL_Group_Port_Data__c</referenceTo>
        <relationshipLabel>DHStatus-V6 WAN IP Address Datas</relationshipLabel>
        <relationshipName>DHStatus_V6_WAN_IP_Address_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Per_IP_Address__c</fullName>
        <label>Per IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WAN_IP_Address__c</fullName>
        <label>WAN IP Address</label>
        <type>TextArea</type>
    </fields>
    <label>DHStatus-V6 WAN IP Address Data</label>
    <nameField>
        <displayFormat>DHV6WAN-{000000}</displayFormat>
        <label>DHStatus-V6 WAN IP Address Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-V6 WAN IP Address Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>